# tradingview-mcp

./: .env.example  .gitignore  Dockerfile  INSTALLATION.md  README.md  pyproject.toml  start.py
openclaw/: trading.py
src/tradingview_mcp/: server.py
src/tradingview_mcp/core/: auth.py
src/tradingview_mcp/core/data/: us_sectors.py
src/tradingview_mcp/core/services/: backtest_service.py  coinlist.py  extended_hours_service.py  futures_service.py  marketaux_service.py  multi_agent_service.py  news_service.py  proxy_manager.py  scanner_service.py  screener_provider.py  screener_service.py  us_service.py  yahoo_finance_service.py
src/tradingview_mcp/core/utils/: validators.py
tests/stress/: test_real_upstream.py
tests/unit/: test_errors.py  test_exchange_aliases.py  test_exchange_fixes.py  test_exchange_resolution.py  test_oauth_helper.py  test_symbol_suggestions.py
tests/unit/services/: test_async_handlers.py  test_backtest_validation.py  test_error_envelopes.py  test_multi_timeframe_analysis.py  test_screener_provider_resilience.py  test_us_sector_multi_time_frame.py
