[project]
name = "tradingview-mcp-server"
version = "0.7.1"
description = "Advanced AI Trading Intelligence Framework — MCP server with walk-forward backtesting, trade logs, equity curves, 1h timeframe, sentiment, Yahoo Finance, and 30+ technical analysis tools"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
  { name = "Atila Ahmettaner" }
]
urls = { Repository = "https://github.com/atilaahmettaner/tradingview-mcp" }
keywords = ["mcp", "tradingview", "crypto", "technical analysis", "screener", "backtesting", "walk-forward", "sentiment", "yahoo-finance", "trading", "agents", "algorithmic-trading", "equity-curve"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "feedparser>=6.0.12",
  "httpx>=0.27",
  "mcp[cli]>=1.12.0",
  "requests>=2.32",
  # Pinned to ==3.0.0 on purpose. 3.2.0 makes a bare Query() default to a
  # *stock* preset filter that silently returns 0 rows for crypto/futures
  # scans, which would break coin/screener/futures tools. The Docker build uses
  # `uv pip install --system .` (ignores uv.lock), so an open range would let a
  # rebuild drift to 3.2.0 and break paid traffic. See futures_service._futures_query.
  "tradingview-screener==3.0.0",
  "tradingview-ta>=3.3.0",
]

[project.scripts]
# Entry point now points to packaged module
tradingview-mcp = "tradingview_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tradingview_mcp = ["coinlist/*.txt"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Default runs stay hermetic — the real-network stress suite only runs when
# explicitly selected: `pytest -m stress tests/stress`.
addopts = '-m "not stress"'
# Opt-in markers — only run when explicitly requested via -m so CI default
# stays hermetic. The 'stress' suite hits real TradingView upstream and
# asserts wall-clock bounds; ``pytest -m stress`` to run.
markers = [
    "stress: real-network stress tests (require live upstream; not in CI)",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
